# etl-dagster-demo

./: .gitignore  README.md  docker-compose.yml
dagster/: Dockerfile  pyproject.toml  workspace.yaml
dagster/etl_project/: __init__.py  config.py  definitions.py  repository.py  resources.py
dagster/etl_project/assets/: __init__.py  uld_assets.py
docs/: NOTES.md
sql/init/: 01_create_tables.sql
sql/seed/: 01_seed_data.sql
