[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etl_project"
version = "0.1.0"
description = "ULD ETL Demo with Dagster"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.12.0",
    "dagster-webserver>=1.12.0",
    "psycopg2-binary>=2.9.0",
]

[tool.dagster]
module_name = "etl_project"
